css/navigation.css
.navigation_list {
  display: flex;
  gap: 50px;
  justify-content: space-between;
}

.navigation_link {
  font-size: 18px;
  line-height: 130%;
  letter-spacing: 0.04em;
  color: var(--second-color);
  position: relative;
}

.navigation_link:before {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 2px;
  background-color: var(--main-bg-color);
  transition-duration: 0.4s;
  transition-property: transform;
  transform: scaleX(0);
}

.navigation_link:hover:before {
  transform: scaleX(1);
}

.navigation_link:active {
  color: var(--main-bg-color);
}

@media (max-width: 1440px) {
  .navigation_list {
    gap: 20px;
  }

  .navigation_link {
    font-size: 16px;
  }
}

@media (max-width: 1000px) {
  .navigation {
    display: none;
    width: 100%;
  }

  .navigation_active {
    display: block;
  }

  .navigation_item {
    flex-basis: 146px;
  }

  .navigation_link {
    display: block;
    width: 100%;
    border: 1px solid #e5ab39;
    border-radius: 20px;
    text-align: center;
    padding: 7px 10px;
    font-style: 14px;
  }

  .navigation_link:before {
    content: none;
  }
}

@media (max-width: 760px) {
  .navigation_list {
    flex-wrap: wrap;
    gap: 8px 6px;
  }

  .navigation_item {
    flex-basis: calc(50% - 6px);
  }
}

@media (max-width: 580px) {
}

